--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ecommerceaws",
+  "name": "aws-serverless",
   "version": "0.1.0",
   "bin": {
-    "ecommerceaws": "bin/ecommerceaws.js"
+    "aws-serverless": "bin/aws-serverless.js"
   },
   "scripts": {
     "build": "tsc",
@@ -11,16 +11,23 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "@types/node": "22.7.9",
+    "@aws-cdk/aws-apigatewayv2-alpha": "^2.114.1-alpha.0",
+    "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.114.1-alpha.0",
+    "@types/aws-lambda": "^8.10.125",
+    "@types/jest": "^29.5.5",
+    "@types/node": "20.7.1",
+    "@types/uuid": "^9.0.6",
+    "aws-cdk": "2.114.1",
+    "aws-sdk": "^2.1485.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
-    "aws-cdk": "2.1016.0",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.6.3"
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "~5.2.2"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.195.0",
-    "constructs": "^10.0.0"
+    "aws-cdk-lib": "^2.196.0",
+    "aws-xray-sdk": "^3.5.3",
+    "constructs": "^10.0.0",
+    "source-map-support": "^0.5.21"
   }
 }
